changing folder structre - adding number example

--- a/cache-example/docker-compose.yml
+++ b/cache-example/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   syslog:
     image: voxxit/rsyslog
     volumes:
-      - ../syslog/:/var/log/
+      - ../../syslog/:/var/log/
     entrypoint: bash -c "rm -f /var/run/rsyslogd.pid && rsyslogd -n"
     ports:
         - "127.0.0.1:5516:514/udp"
@@ -13,7 +13,7 @@ services:
     image: redis:6.0.5
     command: "redis-server --port 6380 --appendonly yes"
     volumes:
-      - ../cache-data:/data
+      - ../../cache-data:/data
     ports:
       - "6380:6380"
     links:
